First batch of code smells (#622)
* First batch of code smells

* Second batch of code smells

* Final cleanups

* Final cleanups #2

* Final cleanups #3

* Final cleanups #4

* Final cleanups #5

* Rollback some changes to fix the tests

* Revert changes