@@ -71,7 +71,6 @@ import com.radixdlt.client.lib.dto.TransactionsDTO;
 import java.util.List;
 import java.util.OptionalLong;
 import java.util.concurrent.atomic.AtomicReference;
-import java.util.stream.Collectors;
 import org.junit.Ignore;
 import org.junit.Test;
 
@@ -122,6 +121,6 @@ public class SyncRadixApiTransactionPaginationTest {
                     v.getSentAt().getInstant().getEpochSecond(),
                     v.getSentAt().getInstant().getNano(),
                     v.getFee()))
-        .collect(Collectors.toList());
+        .toList();
   }
 }
